objects/Sale_Item__c.object
<CustomObject>
    <description>Contains a line for each item within a Sale. Detail object of Sale.</description>
    <label>Sale Item</label>
    <nameField>
        <displayFormat>SLI-{00000000}</displayFormat>
        <label>Sale Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>POS__c</fullName>
        <formula>Sale__r.POS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <description>Parent Sale. Is calculated in Sale Inbound Flow.</description>
        <label>Sale</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Sale Items</relationshipLabel>
        <relationshipName>Sale_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DM_Code__c</fullName>
        <description>DM (Direct Mail) field, which is mapped with RetailActionCode value from InboundSale flow.</description>
        <label>DM Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product to which the Sale Item record is related. Relationship is calculated in Sale Inbound Flow based on Sale Item field Product_Id__c.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sale Items</relationshipLabel>
        <relationshipName>Sale_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sale_Id__c</fullName>
        <description>Parent Sale unique identifier. Is used to relate the Sale in Sale__c field.</description>
        <label>Sale Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sale Items</relationshipLabel>
        <relationshipName>Sale_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EAN_Code__c</fullName>
        <description>Item bar code. Alimented by Sale Inbound Flow.</description>
        <label>EAN Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity sold. Alimented by Sale Inbound Flow.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <description>Item type (sample, gift...). Alimented by Sale Inbound Flow.</description>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RETURN</fullName>
                </value>
                <value>
                    <fullName>GIFT</fullName>
                </value>
                <value>
                    <fullName>ENGRAVING</fullName>
                </value>
                <value>
                    <fullName>FREE_ENGRAVING</fullName>
                </value>
                <value>
                    <fullName>SAMPLE</fullName>
                </value>
                <value>
                    <fullName>SALE</fullName>
                </value>
                <value>
                    <fullName>COMPONENT_BOTTLE</fullName>
                </value>
                <value>
                    <fullName>COMPONENT_RIBBON</fullName>
                </value>
                <value>
                    <fullName>FREE_SALE</fullName>
                </value>
                <value>
                    <fullName>GIFT_MESSAGE</fullName>
                </value>
                <value>
                    <fullName>COMPONENT_KNOT</fullName>
                </value>
                <value>
                    <fullName>PERSONALIZED_ENGRAVING</fullName>
                </value>
                <value>
                    <fullName>EXCHANGE</fullName>
                </value>
                <value>
                    <fullName>GIFT_WITH_PURCHASE</fullName>
                </value>
                <value>
                    <fullName>DIRECT_MAIL</fullName>
                </value>
                <value>
                    <fullName>GIFT_WRAP</fullName>
                </value>
                <value>
                    <fullName>COFFRET</fullName>
                </value>
                <value>
                    <fullName>MAKEUP</fullName>
                </value>
                <value>
                    <fullName>GIFT WRAP</fullName>
                </value>
                <value>
                    <fullName>SALES_WRAP</fullName>
                </value>
                <value>
                    <fullName>GIFTWRAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>Technical field storing Product Id as a text to allow retry. Alimented by Sale Inbound Flow.</description>
        <label>Product Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BC related to the Sale Item.</description>
        <label>Related BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipLabel>Sale Items</relationshipLabel>
        <relationshipName>Sale_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Amount__c</fullName>
        <description>Item amount with discount. Alimented by Sale Inbound Flow.</description>
        <label>Item Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>Item position in the list (first, second, third... item associated to parent sale). Alimented by Sale Inbound Flow.</description>
        <label>Item Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Number__c</fullName>
        <formula>Sale__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Message__c</fullName>
        <label>Personalized Gift Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Item_Id__c</fullName>
        <description>Sale Item Id within the sale. Depends on its position in the list (first item is 10, second item is 20...).</description>
        <label>Sale Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConsumerIDTech__c</fullName>
        <formula>Sale__r.Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConsumerIDTech</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleShopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Google Shopping</label>
        <referenceTo>Google_Shopping__c</referenceTo>
        <relationshipLabel>Sale Items</relationshipLabel>
        <relationshipName>Sale_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRecoveryPCA418__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DRecoveryPCA418</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_BC_Text__c</fullName>
        <description>If Related BC lookup couldn&apos;t be matched with a BC record, BC Id is stored in this field.</description>
        <label>Related BC Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engraved_Message__c</fullName>
        <label>Engraving text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Code__c</fullName>
        <formula>Product__r.SAP_Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <formula>Sale__r.Transaction_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sale_Item_Description__c</fullName>
        <label>Sale Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sale_Item_Id_External__c</fullName>
        <description>Sale Item unique Id. Alimented by Sale Inbound Flow.</description>
        <externalId>true</externalId>
        <label>Sale Item Id External</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Product_Lookup_Retry__c</fullName>
        <description>Date/time of the last run of retry process populating Product lookup.</description>
        <label>Last Product Lookup Retry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Lookup_Retry_Count__c</fullName>
        <description>Technical field counting the number of runs of the retry process for Product lookup on the record.</description>
        <label>Product Lookup Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Amount_Without_Discount__c</fullName>
        <description>Item amount without discount. Alimented by Sale Inbound Flow.</description>
        <label>Item Amount Without Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>